header + preview сайта без адаптива

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 	</header>
 
 	<div class="preview">
-		
+		<div class="slider">
+			<h1 class="slider-title">Продажа поддонов б/у в москве</h1>
+			<p class="slider-subtitle">Доставка осуществляется круглосуточно,</p>
+				<p class="slider-subtitle">в любое удобное время</p>
+			<a class="slider-btn" href="#">Подробнее</a>
+		</div>
 	</div>
 </body>
 </html>
