переделал header + preview. Без адаптива

--- a/index.html
+++ b/index.html
@@ -10,52 +10,45 @@
 <body>
 	<header class="header">
 		<div class="container">
-		
-			<div class="header__logo">
-				<img src="assets/img/logo.svg" class="header__logo-icon">
-				<img src="assets/img/logo-text.svg" class="header__logo-text">
+			<div class="logo">
+				<img src="assets/img/logo.png" alt="">
 			</div>
-			<div class="header__info">
-				<span>
-					<i class="fa-solid fa-location-dot"></i> ООО СТРОЙБРИГ ИНН: 7720484439
-				</span>
 
-				<span>
-					<i class="fa-solid fa-clock"></i> Пн-Вс с 9:00 до 20:00
-				</span>
-
-				<span>
-					<i class="fa-solid fa-envelope"></i> info@a-pallet.ru
-				</span>
-
-				<span>
-					<i class="fa-solid fa-phone"></i> +7 495 155 73 97
-				</span>
-			</div>
-			
 			<nav class="header__nav">
 				<ul>
-					<li><a href="#">О нас</a></li>
+					<li><a href="#">о нас</a></li>
 					<li><a href="#">Продукция</a></li>
 					<li><a href="#">Приемущества</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
-
-				<div class="header__nav--callback">
-					<i class="fa-solid fa-headset"></i>
-					<a href="#">Обратный звонок</a>
-				</div>
 			</nav>
+
+			<div class="header__number">
+				<i class="fa-solid fa-phone"></i> 8-999-872-17-53
+			</div>
+		</div>
+
+		<div class="header__info">
+			<ul>
+				<li><i class="fa-solid fa-location-dot"></i>ООО СТРОЙБРИГ ИНН: 7720484439</li>
+				<li><i class="fa-solid fa-clock"></i>Пн-Вс с 9:00 до 20:00</li>
+				<li><i class="fa-solid fa-envelope"></i>info@a-pallet.ru</li>
+			</ul>
 		</div>
 	</header>
-
-	<div class="preview">
-		<div class="slider">
-			<h1 class="slider-title">Продажа поддонов б/у в москве</h1>
-			<p class="slider-subtitle">Доставка осуществляется круглосуточно,</p>
-				<p class="slider-subtitle">в любое удобное время</p>
-			<a class="slider-btn" href="#">Подробнее</a>
+	<div class="container">
+		<div class="preview">
+			<div class="slider">
+				<h1 class="slider-title">Продажа новых и Б/У  поддонов в Москве</h1>
+				<p class="slider-subtitle">Бесплатная доставка по городу и 25 км от МКАД, продажа от 150 штук</p>
+				<p class="slider-subtitle">Скупка б/у поддонов</p>
+				<p class="slider-subtitle-sub slider-subtitle-sub">Доставка осуществляется круглосуточно,</p>
+				<p class="slider-subtitle-sub slider-subtitle-sub">в любое удобное время</p>
+				<a class="slider-btn" href="#">Подробнее</a>
+			</div>
 		</div>
 	</div>
+	
 </body>
 </html>
+
