header, preview - Адаптив

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- общие стили -->
 	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- стили для разной ширины экрана -->
+	<link rel="stylesheet" href="assets/css/adaptive/1400.css">
+	<link rel="stylesheet" href="assets/css/adaptive/1200.css">
+	<link rel="stylesheet" href="assets/css/adaptive/1100.css">
+	<link rel="stylesheet" href="assets/css/adaptive/1000.css">
+	<link rel="stylesheet" href="assets/css/adaptive/840.css">
+	<link rel="stylesheet" href="assets/css/adaptive/700.css">
+	<link rel="stylesheet" href="assets/css/adaptive/640.css">
 	<title>МОНЕКС</title>
 	<script src="https://kit.fontawesome.com/a3c0ffdb65.js" crossorigin="anonymous"></script> <!-- иконки -->
 </head>
@@ -14,6 +23,9 @@
 				<img src="assets/img/logo.png" alt="">
 			</div>
 
+			<div class="header__nav-sidebar">
+				<i class="fa-solid fa-bars"></i>
+			</div>
 			<nav class="header__nav">
 				<ul>
 					<li><a href="#">о нас</a></li>
