Блок about, pallet + адаптив

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="assets/css/adaptive/840.css">
 	<link rel="stylesheet" href="assets/css/adaptive/700.css">
 	<link rel="stylesheet" href="assets/css/adaptive/640.css">
+	<link rel="stylesheet" href="assets/css/adaptive/540.css">
 	<title>МОНЕКС</title>
 	<script src="https://kit.fontawesome.com/a3c0ffdb65.js" crossorigin="anonymous"></script> <!-- иконки -->
 </head>
@@ -60,7 +61,191 @@
 			</div>
 		</div>
 	</div>
-	
+
+	<section class="section">
+		<div class="container">
+			<h2 class="section__title">О нас</h2>
+			<div class="about">
+				<div class="about__item">
+					<div class="about__text">
+						<div class="about-title">
+							<span>Лучшая</span> цена на рынке
+					</div>
+						<p class="about-description">
+							Держим лучшие цены  на рынке 
+						</p>
+					</div>
+					<div class="about__img">
+						<div class="about__img-opacity"></div>
+						<img src="assets/img/about/1.png">
+					</div>
+				</div> <!-- about item -->
+
+				<div class="about__item">
+					<div class="about__text">
+						<div class="about-title">
+							<span>24</span> часа доставка
+					</div>
+						<p class="about-description">
+							Круглосуточная доставка доставит быстро и вовремя ваш заказ
+						</p>
+					</div>
+					<div class="about__img">
+						<div class="about__img-opacity"></div>
+						<img src="assets/img/about/2.png">
+					</div>
+				</div> <!-- about item -->
+
+				<div class="about__item">
+					<div class="about__text">
+						<div class="about-title">
+							<span>большая</span> система скидок
+					</div>
+						<p class="about-description">
+							Индивидуально для каждого клиента
+						</p>
+					</div>
+					<div class="about__img">
+						<div class="about__img-opacity"></div>
+						<img src="assets/img/about/3.png">
+					</div>
+				</div> <!-- about item -->
+
+				<div class="about__item">
+					<div class="about__text">
+						<div class="about-title">
+							<span>с нами</span> выгодно надежно и быстро
+						</div>
+						<p class="about-description">
+							Уже 10 лет мы занимаем лидирующие позиции на рынке 
+						</p>
+					</div>
+					<div class="about__img">
+						<div class="about__img-opacity"></div>
+						<img src="assets/img/about/4.png">
+					</div>
+				</div> <!-- about item -->
+			</div>
+			</div>
+			
+			
+		</div>
+	</section> <!-- about us -->
+	<section class="section">
+		<div class="container">
+			<h2 class="section__title">ДЕРЕВЯННЫЕ ПОДДОНЫ Б/У</h2>
+			<div class="pallet">
+				<div class="pallet__item">
+					<div class="pallet-img">
+						<img src="assets/img/pallet.png">
+					</div>
+					<div class="pallet-title">ОБЛЕГЧЕННЫЙ ПОДДОН</div>
+					<div class="pallet-width">1200X800</div>
+
+					<p class="pallet-description">
+						Размер: 1200х800 мм тонкий
+						Грузоподъемность: 600-800 кг
+						Толщина доски: 15-17мм
+					</p>
+					<div class="pallet-cost">
+						<span>от 100 руб/шт.</span>
+						<a href="#" class="pallet-cost-btn">купить</a>
+					</div>
+				</div> <!-- pallet item -->
+
+				<div class="pallet__item">
+					<div class="pallet-img">
+						<img src="assets/img/pallet.png">
+					</div>
+					<div class="pallet-title">ОБЛЕГЧЕННЫЙ ПОДДОН</div>
+					<div class="pallet-width">1200X800</div>
+
+					<p class="pallet-description">
+						Размер: 1200х800 мм тонкий
+						Грузоподъемность: 600-800 кг
+						Толщина доски: 15-17мм
+					</p>
+					<div class="pallet-cost">
+						<span>от 100 руб/шт.</span>
+						<a href="#" class="pallet-cost-btn">купить</a>
+					</div>
+				</div> <!-- pallet item -->
+
+				<div class="pallet__item">
+					<div class="pallet-img">
+						<img src="assets/img/pallet.png">
+					</div>
+					<div class="pallet-title">ОБЛЕГЧЕННЫЙ ПОДДОН</div>
+					<div class="pallet-width">1200X800</div>
+
+					<p class="pallet-description">
+						Размер: 1200х800 мм тонкий
+						Грузоподъемность: 600-800 кг
+						Толщина доски: 15-17мм
+					</p>
+					<div class="pallet-cost">
+						<span>от 100 руб/шт.</span>
+						<a href="#" class="pallet-cost-btn">купить</a>
+					</div>
+				</div> <!-- pallet item -->
+
+				<div class="pallet__item">
+					<div class="pallet-img">
+						<img src="assets/img/pallet.png">
+					</div>
+					<div class="pallet-title">ОБЛЕГЧЕННЫЙ ПОДДОН</div>
+					<div class="pallet-width">1200X800</div>
+
+					<p class="pallet-description">
+						Размер: 1200х800 мм тонкий
+						Грузоподъемность: 600-800 кг
+						Толщина доски: 15-17мм
+					</p>
+					<div class="pallet-cost">
+						<span>от 100 руб/шт.</span>
+						<a href="#" class="pallet-cost-btn">купить</a>
+					</div>
+				</div> <!-- pallet item -->
+
+				<div class="pallet__item">
+					<div class="pallet-img">
+						<img src="assets/img/pallet.png">
+					</div>
+					<div class="pallet-title">ОБЛЕГЧЕННЫЙ ПОДДОН</div>
+					<div class="pallet-width">1200X800</div>
+
+					<p class="pallet-description">
+						Размер: 1200х800 мм тонкий
+						Грузоподъемность: 600-800 кг
+						Толщина доски: 15-17мм
+					</p>
+					<div class="pallet-cost">
+						<span>от 100 руб/шт.</span>
+						<a href="#" class="pallet-cost-btn">купить</a>
+					</div>
+				</div> <!-- pallet item -->
+
+				<div class="pallet__item">
+					<div class="pallet-img">
+						<img src="assets/img/pallet.png">
+					</div>
+					<div class="pallet-title">ОБЛЕГЧЕННЫЙ ПОДДОН</div>
+					<div class="pallet-width">1200X800</div>
+
+					<p class="pallet-description">
+						Размер: 1200х800 мм тонкий
+						Грузоподъемность: 600-800 кг
+						Толщина доски: 15-17мм
+					</p>
+					<div class="pallet-cost">
+						<span>от 100 руб/шт.</span>
+						<a href="#" class="pallet-cost-btn">купить</a>
+					</div>
+				</div> <!-- pallet item -->
+
+			</div>
+		</div>
+	</section> <!-- pallet -->
 </body>
 </html>
 
