--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="assets/css/adaptive/700.css">
 	<link rel="stylesheet" href="assets/css/adaptive/640.css">
 	<link rel="stylesheet" href="assets/css/adaptive/540.css">
+	<link rel="stylesheet" href="assets/css/adaptive/400.css">
 	<title>МОНЕКС</title>
 	<script src="https://kit.fontawesome.com/a3c0ffdb65.js" crossorigin="anonymous"></script> <!-- иконки -->
 </head>
@@ -140,7 +141,7 @@
 						Собственное производство
 					</h2>
 					<p class="production__text">
-						В качестве и прочности подднов мы кверены на 100%, ведьмы сами производи и спользуем их.
+						В качестве и прочности подднов мы уверены на 100%, ведьмы сами производи и спользуем их.
 						Быстрая конвеерная лента позвооляет нам увеличть объем поставки, не теряя в качестве.
 
 						Закажите обратный звонок и получите персональную скидку.
@@ -273,6 +274,10 @@
 					</div>
 				</div> <!-- pallet item -->
 
+				<div class="pallet-btn">
+					<a href="#">Полный каталог</a>
+				</div>
+
 			</div>
 		</div>
 	</section> <!-- pallet -->
@@ -310,7 +315,54 @@
 			<div class="form__item"><img src="assets/img/form.png" alt=""></div>
 			
 		</div>
-	</section>
+	</section> <!-- form -->
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__item">
+				<img src="assets/img/footer-logo.png" class="footer-logo">
+				<p class="footer-copyright">© Все права защищены.</p>
+			</div> <!-- footer item -->
+
+			<div class="footer__item">
+				<nav class="footer__nav">
+					<ul>
+						<li><a href="#">О нас</a></li>
+						<li><a href="#">Продукция</a></li>
+						<li><a href="#">Приемущества</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+
+			<div class="footer__item">
+				<div class="footer__info">
+					<ul>
+						<li><i class="fa-solid fa-location-dot"></i>ООО СТРОЙБРИГ ИНН: 7720484439</li>
+						<li><i class="fa-solid fa-clock"></i>Пн-Вс с 9:00 до 20:00</li>
+						<li><i class="fa-solid fa-envelope"></i>info@a-pallet.ru</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="footer__item">
+				<div class="footer__feedback">
+					<p class="footer__feedback-text">Заказы принимаются круглосуточно</p>
+					<div class="footer__feedback-btn">
+						<i class="fa-solid fa-headset"></i>
+						<a href="#">Обратный звонок</a>
+					</div>
+					<div class="footer__number">
+						<i class="fa-solid fa-phone"></i> 8-999-872-17-53
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer-police">
+			Политика конфиденциальности
+		</div>
+	</footer>
 </body>
 </html>
 
