Незначительные правки. Добавил readme

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</ul>
 		</div>
 	</header>
-	<div class="container">
+	<div class="container container--preview">
 		<div class="preview">
 			<div class="slider">
 				<h1 class="slider-title">Продажа новых и Б/У  поддонов в Москве</h1>
@@ -61,6 +61,7 @@
 				<a class="slider-btn" href="#">Подробнее</a>
 			</div>
 		</div>
+		<img src="assets/img/car.png" class="car-bg">
 	</div>
 
 	<section class="section">
