поменял фон header'а для устройств с разрешением меньше тысячи

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<a class="slider-btn" href="#">Подробнее</a>
 			</div>
 		</div>
-		<img src="assets/img/car.png" class="car-bg">
+		<!-- <img src="assets/img/car.png" class="car-bg"> -->
 	</div>
 
 	<section class="section">
